<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homePageFragment"
        android:icon="@drawable/nav_home"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/home" />
    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movie"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/movie" />
    <item
        android:id="@+id/tvFragment"
        android:icon="@drawable/ic_tv"

        android:orderInCategory="3"
        app:showAsAction="always"
        android:title="@string/tv" />
    <item
        android:id="@+id/favFragment"
        android:icon="@drawable/nav_fav"

        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="@string/fav" />

</menu>