<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />


        <variable
            name="isLoadingMoviePlayingNow"
            type="java.lang.Boolean" />

        <variable
            name="isLoadingMovieTopRated"
            type="java.lang.Boolean" />


        <variable
            name="isLoadingMoviePopular"
            type="java.lang.Boolean" />

        <variable
            name="isLoadingMovieUpComing"
            type="java.lang.Boolean" />

    </data>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGrey"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <View
                    android:id="@+id/line1"
                    android:layout_width="@dimen/dimen2dp"
                    android:layout_height="@dimen/match_parent"
                    android:layout_marginStart="@dimen/dimen16dp"
                    android:layout_marginEnd="@dimen/dimen8dp"
                    android:background="@color/yellow1"
                    android:visibility="@{!isLoadingMoviePlayingNow ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/titlePlayingNow"
                    app:layout_constraintEnd_toStartOf="@id/titlePlayingNow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/titlePlayingNow" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/titlePlayingNow"
                    android:layout_width="@dimen/match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:text="@string/playingNow"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:visibility="@{!isLoadingMoviePlayingNow ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@id/rvPlayingNow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line1"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPlayingNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen8dp"
                    android:visibility="@{!isLoadingMoviePlayingNow ? View.VISIBLE : View.GONE}"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titlePlayingNow"
                    tools:listitem="@layout/list_item_hor" />


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/loadingMoviePlayingNowLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titlePlayingNow"
                    app:shimmer_repeat_mode="restart"
                    app:shimmer_shape="radial">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />


                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <View
                    android:id="@+id/line2"
                    android:layout_width="@dimen/dimen2dp"
                    android:layout_height="@dimen/match_parent"
                    android:layout_marginStart="@dimen/dimen16dp"
                    android:layout_marginEnd="@dimen/dimen8dp"
                    android:background="@color/yellow1"
                    android:visibility="@{!isLoadingMovieTopRated ? View.VISIBLE : View.GONE}"

                    app:layout_constraintBottom_toBottomOf="@id/titleTopRated"
                    app:layout_constraintEnd_toStartOf="@id/titleTopRated"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/titleTopRated" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/titleTopRated"
                    android:layout_width="@dimen/match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:text="@string/topRated"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:visibility="@{!isLoadingMovieTopRated ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@id/rvTopRated"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line2"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen8dp"
                    android:visibility="@{!isLoadingMovieTopRated ? View.VISIBLE : View.GONE}"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTopRated"
                    tools:listitem="@layout/list_item_hor" />


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/loadingMovieTopRatedLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleTopRated"
                    app:shimmer_repeat_mode="restart"
                    app:shimmer_shape="radial">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />


                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <View
                    android:id="@+id/line3"
                    android:layout_width="@dimen/dimen2dp"
                    android:layout_height="@dimen/match_parent"
                    android:layout_marginStart="@dimen/dimen16dp"
                    android:layout_marginEnd="@dimen/dimen8dp"
                    android:background="@color/yellow1"
                    android:visibility="@{!isLoadingMoviePopular ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/titlePopular"
                    app:layout_constraintEnd_toStartOf="@id/titlePopular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/titlePopular" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/titlePopular"
                    android:layout_width="@dimen/match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:text="@string/popular"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:visibility="@{!isLoadingMoviePopular ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@id/rvPopular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line3"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen8dp"
                    android:visibility="@{!isLoadingMoviePopular ? View.VISIBLE : View.GONE}"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titlePopular"
                    tools:listitem="@layout/list_item_hor" />


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/loadingMoviePopularLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titlePopular"
                    app:shimmer_repeat_mode="restart"
                    app:shimmer_shape="radial">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />


                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <View
                    android:id="@+id/line4"
                    android:layout_width="@dimen/dimen2dp"
                    android:layout_height="@dimen/match_parent"
                    android:layout_marginStart="@dimen/dimen16dp"
                    android:layout_marginEnd="@dimen/dimen8dp"
                    android:background="@color/yellow1"
                    android:visibility="@{!isLoadingMovieUpComing ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/titleUpComing"
                    app:layout_constraintEnd_toStartOf="@id/titleUpComing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/titleUpComing" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/titleUpComing"
                    android:layout_width="@dimen/match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen16dp"
                    android:text="@string/upComing"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="@color/black"
                    android:visibility="@{!isLoadingMovieUpComing ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@id/rvUpComing"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/line4"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvUpComing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/dimen8dp"
                    android:visibility="@{!isLoadingMovieUpComing ? View.VISIBLE : View.GONE}"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleUpComing"
                    tools:listitem="@layout/list_item_hor" />


                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/loadingMovieUpComingLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/titleUpComing"
                    app:shimmer_repeat_mode="restart"
                    app:shimmer_shape="radial">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />

                        <include layout="@layout/list_item_hor_loading" />


                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</layout>